--- a/.github/workflows/automated_tests.yml
+++ b/.github/workflows/automated_tests.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-        MANIFOLD_API_KEY: '${{ secrets.MANIFOLD_API_KEY }}'
+        MANIFOLD_API_KEY: ${{ secrets.MANIFOLD_API_KEY }}
     steps:
       - uses: actions/checkout@v3
 
